<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                android:backgroundTint="@color/primary"
                android:text="@string/back_btn" />

            <TextView
                android:id="@+id/RegisterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/action_create_account"
                android:textColor="@color/extra"
                android:textSize="18dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/outline_article_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/prompt_name"
                    android:padding="8dp"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/editEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/emailError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="47dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawablePadding="8dp"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/passError"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColor="@android:color/holo_red_dark"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:id="@+id/continueBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:enabled="false"
                android:text="@string/continue_btn" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>
